# FluxLang

./: .gitignore  ChangeLog.md  LICENSE  README.md  SECURITY.md  UV_SETUP.md  alloca_align_audit.txt  allocation_audit.py  alphabet.exe.bochsimg  alphabet.exe.bochsrc  alphabet.exe.i64  args  array_test  array_test.map  asm_test.fx  bool_ptr  bool_ptr.map  char_test.map  count_days.py  debug_test.fx  fc.py  file_test.map  flux_compiler.py  fpm.py  frt.lib  fxc.py  hello_world.exe.i64  helloworld  helloworld.exe.asm  helloworld.exe.bak  helloworld.map  history.txt  language_specification.md  language_specification_simplified.md  math_test  nix_file_test  nix_file_test.map  os_detect  os_detect.map  pppost.fx  (+23 more)
.fpm/: installed.json  registry.json  sources.json
config/: flux_config.cfg  flux_logging.json
docs/: about_structs.md  codegen_progress.md  cstruct_and_class.md  fpm.md  keyword_progress.md  keyword_reference.md  lang_spec_full.md  language_specification_simplified.md  learn_flux_adept.md  learn_flux_intro.md  local_specification.md  logging_system.md  operator_reference.md  readme.md  register_keyword.md  solutions.md  struct_specification.md  style_guide.md  what_works.md  windows_setup_guide.md
editor-support/: README.md
examples/: 2darray.fx  ________.fx  addlibdir.fx  address_cast.fx  aes.fx  alphabet.fx  arb_func_ptr.fx  args.fx  asm_test  asm_test.fx  assert.fx  attributions.txt  bitslice.fx  calc.fx  chain.fx  chain_str.fx  client.fx  codify.fx  console.fx  cust_oper.fx  default_params.fx  defer.fx  deprecate.fx  detour.fx  dowhile_test  dowhile_test.fx  enum_demo.fx  error_union.fx  filestats.fx  flexer.fx  fluid_sim.fx  for_loop.fx  fpreprocess.fx  from_no_invalidate.fx  func_contract.fx  func_ptr.fx  guess.fx  heap.fx  heap_keyword.fx  hello_macro.fx  (+83 more)
scripts/: dev.py  fix_spacing.py  flsp.py  run_tests.py  setup.py
tests/: 0.fx  1ms.fx  64bit_arith.fx  64bit_arith2.fx  64bit_direct_test.fx  64bit_direct_test2.fx  64bit_pinpoint.fx  64bit_su_test.fx  64bit_test1.fx  FAILING_TEST_SUITE_REPORT.md  acceptor.fx  addrof_test.fx  age.fx  alphabet.fx  andand.fx  arena_stress.fx  args.fx  (+264 more)
(+204 files in other folders)
